refactor: enforce jsonl-only extraction